CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
SET (TARGET kml2kml)
PROJECT (${TARGET})

FIND_PACKAGE (Qt4 4.6.0 REQUIRED QtCore QtGui)
FIND_PACKAGE (Marble REQUIRED)
INCLUDE (${QT_USE_FILE})
INCLUDE_DIRECTORIES (${MARBLE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(../../src/lib)
INCLUDE_DIRECTORIES(../../src/lib/geodata)
INCLUDE_DIRECTORIES(../../src/lib/geodata/data)
INCLUDE_DIRECTORIES(../../src/lib/geodata/parser)
INCLUDE_DIRECTORIES(../../src/lib/geodata/writer)
SET (LIBS ${LIBS} ${MARBLE_LIBRARIES} ${QT_LIBRARIES})

ADD_EXECUTABLE (${TARGET} kml2kml.cpp)
TARGET_LINK_LIBRARIES (${TARGET} ${LIBS})
