CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
SET (TARGET maptheme-previewimage)
PROJECT (${TARGET})

FIND_PACKAGE (Qt4 4.6.0 REQUIRED QtCore QtGui)
FIND_PACKAGE (Marble REQUIRED)
INCLUDE (${QT_USE_FILE})
INCLUDE_DIRECTORIES (${MARBLE_INCLUDE_DIR})
SET (LIBS ${LIBS} ${MARBLE_LIBRARIES} ${QT_LIBRARIES})
QT4_ADD_RESOURCES( RESOURCES canvas.qrc )

ADD_EXECUTABLE (${TARGET} main.cpp ${RESOURCES})
TARGET_LINK_LIBRARIES (${TARGET} ${LIBS})
